<resources>
    <string name="app_name">UOTAN</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="describe">Describe</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edittext_hint_default">Please enter your content here</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="resource">Resource</string>
    <string name="section">Section</string>
    <string name="topic">Topic</string>
    <string name="view_count">View Count</string>
    <string name="comment_count">Comment Count</string>
    <string name="search_all">Search for all forum content</string>
    <string name="message">Message</string>
    <string name="latest">Latest</string>
    <string name="recommend">Recommend</string>
    <string name="user_name">User Name</string>
    <string name="time">Time</string>
    <string name="content">Content</string>
    <string name="please_comment">Leave a comment</string>
    <string name="share_count">Share Count</string>
    <string name="favourite_count">Favourite Count</string>
    <string name="follow">Follow</string>
    <string name="welcome">Welcome to UOTAN Community</string>
    <string name="welcome_describe">Your mobile phone flashing resource library</string>
    <string name="no_login">Let\'s take a look first, don\'t log in for now</string>
    <string name="first_login">I already have an account, go log in</string>
    <string name="first_register">No account, go register</string>
    <string name="allow_arguments">Agree to the Service Agreement, Privacy Policy, User Agreement, Disclaimer</string>
    <string name="login">Log in</string>
    <string name="username_or_email">Username or email address</string>
    <string name="password">Password</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="redmi">Redmi</string>
    <string name="oneplus">Oneplus</string>
    <string name="meizu">Meizu</string>
    <string name="tablet_laptop">Tablet/Laptop</string>
    <string name="smart_life">Smart Life</string>
    <string name="systems_software">Systems Software</string>
    <string name="forum_services">Forum Services</string>
    <string name="please_press_username_password">Please enter your username or email and password</string>
    <string name="please_press_username">Please enter your username or email</string>
    <string name="please_press_password">Please enter your password</string>
    <string name="password_incorrect">Your account password is incorrect or not registered</string>
    <string name="my_follow">My Follow</string>
    <string name="skip">Skip</string>
    <string name="developing">Developing</string>
    <string name="no_follow_plate">The section you may not have been following yet, Meow~</string>
    <string name="logging_in">Logging in</string>
    <string name="privacy_policy_update">Privacy Policy Update</string>
    <string name="read_and_accept_the_privacy_policy">Read and accept the privacy policy</string>
    <string name="last_updated">Last Updated</string>
    <string name="accept">Accept</string>
    <string name="thank_choice">Thank you for choosing UOTAN Community</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="unknown">Unknown</string>
    <string name="ip_location">IP location</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="third_party_login">Third party account login</string>
    <string name="two_step_hint_email">We have already used service@uotan.cn I have emailed your email address containing a six digit one-time code. Please enter a one-time code to continue.</string>
    <string name="two_step_hint_totp">Your account has enabled two-step verification. Please enter the six-digit one-time password generated in the authenticator app to continue.</string>
    <string name="two_step_hint_backup">When you set up two-step verification, we will automatically generate ten nine-digit two-step verification backup codes for you. Each two-step verification backup code can only be used once. Please enter any one of the two-step verification backup codes to continue. After completion, we will email inform the account owner that the account has been used with a two-step verification backup code.</string>
    <string name="one_time_code">One time code</string>
    <string name="backup_code">Backup code</string>
    <string name="code_format_doesnt_match">One time code format does not match</string>
    <string name="code_incorrect">The one-time code is incorrect</string>
    <string name="auth_app_unavailable">My authenticator app is unavailable</string>
    <string name="continue_auth_app">Continue to use the authenticator app for two-step verification</string>
    <string name="received_likes">Received likes</string>
    <string name="follow_me">Follow me</string>
    <string name="system_message">System message</string>
    <string name="at_my">\@ My</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="updater">Updater</string>
    <string name="theme">Theme</string>
    <string name="network">Network</string>
    <string name="user_agreement_policy">User Agreement and Policy</string>
    <string name="core_mhym" translatable="false">明辉映梦</string>
    <string name="core_ln" translatable="false">流年</string>
    <string name="core_mjw">MJW</string>
    <string name="core_yuzh" translatable="false">yuzh</string>
    <string name="core_lemo" translatable="false">lemo</string>
    <string name="core_xh" translatable="false">星鸿</string>
    <string name="core_zach" translatable="false">zach</string>
    <string name="core_hy" translatable="false">皓洋</string>
    <string name="thanks_rayzggz" translatable="false">Rayzggz</string>
    <string name="core_describe_ln">Co-Founder</string>
    <string name="core_describe_lemo">Product/Design</string>
    <string name="core_describe_xh">Website DevOps</string>
    <string name="core_describe_mhym">Founder</string>
    <string name="core_describe_mjw">Co-Founder</string>
    <string name="core_describe_yuzh">Community Development</string>
    <string name="core_describe_zach">Website manpower</string>
    <string name="core_describe_hy">Website Development</string>
    <string name="thanks_describe_rayzggz">Technical support</string>
    <string name="thanks_describe_gustate">Android APP development</string>
    <string name="uotan_describe">Greetings! It is a pleasure to meet fellow digital enthusiasts like you in this vast tech ecosystem.\nWe have walked the same path - bewildered by fragmented online resources, wearied by scavenging across websites for usable information. Yet we have always envisioned building a Mi-fan-centric content community where valuable knowledge transcends isolated islands, creating a pure digital space for like-minded enthusiasts.\nOur core philosophy remains unchanged: to embrace a more open information ecosystem, maximize content value, and empower creators to foster a virtuous cycle.\nDespite financial constraints and staffing challenges, we have persevered.\nSince 2020, our web and app platforms have undergone strategic iterations, charting clearer development trajectories. This progress owes to our content team\'s dedication - your open-source spirit has enriched UOTAN Community with creative brilliance.\nThis is UOTAN Community: committed to building better device-enthusiast content ecosystems.\nThrough it all, we remain steadfast.</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="core_team">Core Team - Our team comes from all over China.</string>
    <string name="special_thanks">Special thanks - thank you to the developers who provided us with technical support behind the scenes.</string>
    <string name="open_source_address">Open source address</string>
    <string name="open_source_address_link" translatable="false">https://github.com/Uotan-Dev/UOTAN-for-Android</string>
    <string name="github_name" translatable="false">UOTAN-for-Android</string>
    <string name="private_message">Private message</string>
    <string name="trends">Trends</string>
    <string name="categorize">Categorize</string>
    <string name="liked_the_article">Liked the article</string>
    <string name="replied_to_the_article">Replied to the article</string>
    <string name="resource_update">Resource update</string>
    <string name="points_change">Points change</string>
    <string name="selected_recommendations">Selected recommendations</string>
    <string name="new_post">New</string>
    <string name="service_agreement_update">Service Agreement Update</string>
    <string name="network_request_failed">Network request failed</string>
    <string name="china_mainland_verify">Users in Chinese Mainland need to bind their mobile phone number to use all functions</string>
    <string name="bind_phone_number">Bind phone number</string>
    <string name="p86" translatable="false">🇨🇳 +86</string>
    <string name="phone_number">Phone number</string>
    <string name="binding">Binding</string>
    <string name="send">Send</string>
    <string name="binding_phone_number_hint">Please enter your phone number and send the verification code. We will send a text message containing a six digit one-time code to the phone number you entered. Please enter the one-time code to bind your phone number.</string>
    <string name="enter_valid_phone_number">Please enter a valid +86 phone number</string>
    <string name="del_comment_lower_points">Your points have decreased due to deleting comments</string>
    <string name="register_improve_points">Your points have increased due to registering an account</string>
    <string name="authentication">Authentication</string>
    <string name="total_posts">Total posts</string>
    <string name="number_of_resources">Number of resources</string>
    <string name="num_zero" translatable="false">0</string>
    <string name="collect">Collect</string>
    <string name="applicable_equipment">Applicable equipment</string>
    <string name="download_channel">Download channel</string>
    <string name="file_size">File size</string>
    <string name="extracted_code">Extracted code</string>
    <string name="author">Author</string>
    <string name="view">View</string>
    <string name="download">Download</string>
    <string name="first_release">First release</string>
    <string name="last_update">Last update</string>
    <string name="daily_attendance">Daily Attendance</string>
    <string name="signed_in_today">Signed in today</string>
    <string name="sign_in_successful">Sign in successful</string>
    <string name="check_in_failed">Check in failed</string>
    <string name="you_have_checked_in_today">You have checked in today</string>
    <string name="post">Post</string>
    <string name="select_section">Select section</string>
    <string name="add_prefix">Add prefix</string>
    <string name="enter_title_hint">Please enter your title here</string>
    <string name="blackshark">Blackshark</string>
    <string name="mipad">Xiaomi Pad</string>
    <string name="redmipad">Redmi Pad</string>
    <string name="lenovopad">Lenovo Pad</string>
    <string name="xiaomilaptop">Xiaomi Laptop</string>
    <string name="mijia">MIJIA</string>
    <string name="miband">Xiaomi Band</string>
    <string name="miwatch">Xiaomi Watch</string>
    <string name="windows" translatable="false">Windows</string>
    <string name="select_section_toast">Please select a section</string>
    <string name="little_content_toast">You have entered too little content</string>
    <string name="official_website">Official Website</string>
    <string name="thanks_gustate">Gustate</string>
</resources>