<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    tools:context=".settings.ui.about.AboutActivity">

    <com.gustate.uotan.ui.view.effect.BgEffectView
        android:id="@+id/bkg_effect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_uo"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_uo" />

            <ImageView
                android:id="@+id/ic_tan"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_uo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_tan" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/version_name"
            android:textColor="?attr/colorOnCardPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_icon" />
    </com.gustate.uotan.ui.view.effect.BgEffectView>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/srlRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srlEnablePureScrollMode="true">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbarThumbVertical="@drawable/gustatex_scrollbar_thumb_vertical"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp">

                <com.gustate.uotan.ui.view.smooth.SmoothCornerLayout
                    android:id="@+id/layout_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/uotan_bkg_option"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:scl_corner_radius="@dimen/option_corner_radius"
                    app:scl_smoothness_radius="@dimen/normal_smoothness">

                    <com.gustate.uotan.ui.view.option.OptionDetailView
                        android:id="@+id/odv_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gustatex_btn_none_bkg_normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:odv_arrow_gone="true"
                        app:odv_detail="@string/num_zero"
                        app:odv_title="@string/version_code" />

                    <com.gustate.uotan.ui.view.option.OptionDetailView
                        android:id="@+id/odv_web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gustatex_btn_none_bkg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/odv_version"
                        app:odv_detail="@string/app_name"
                        app:odv_title="@string/official_website" />
                </com.gustate.uotan.ui.view.smooth.SmoothCornerLayout>

                <com.gustate.uotan.ui.view.smooth.SmoothCornerLayout
                    android:id="@+id/layout_app"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/uotan_bkg_option_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_info"
                    app:scl_corner_radius="@dimen/option_corner_radius"
                    app:scl_smoothness_radius="@dimen/normal_smoothness">

                    <TextView
                        android:id="@+id/tv_app"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/uotan_describe"
                        android:textColor="?attr/colorOnCardPrimary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </com.gustate.uotan.ui.view.smooth.SmoothCornerLayout>

                <TextView
                    android:id="@+id/tv_core"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="28dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/core_team"
                    android:textColor="?attr/colorOnBackgroundTertiary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_app"
                    tools:ignore="TextContrastCheck" />

                <com.gustate.uotan.ui.view.smooth.SmoothCornerLayout
                    android:id="@+id/scl_core"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/uotan_bkg_option_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_core"
                    app:scl_corner_radius="@dimen/option_corner_radius"
                    app:scl_smoothness_radius="@dimen/normal_smoothness">

                    <LinearLayout
                        android:id="@+id/layout_core"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_mhym"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_mhym.jpg"
                            app:ouv_describe="@string/core_describe_mhym"
                            app:ouv_title="@string/core_mhym" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_ln"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_ln.jpg"
                            app:ouv_describe="@string/core_describe_ln"
                            app:ouv_title="@string/core_ln" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_mjw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_mjw.jpg"
                            app:ouv_describe="@string/core_describe_mjw"
                            app:ouv_title="@string/core_mjw" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_yuzh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_yuzh.png"
                            app:ouv_describe="@string/core_describe_yuzh"
                            app:ouv_title="@string/core_yuzh" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_lemo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_lemo.png"
                            app:ouv_describe="@string/core_describe_lemo"
                            app:ouv_title="@string/core_lemo" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_xh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_xh.jpg"
                            app:ouv_describe="@string/core_describe_xh"
                            app:ouv_title="@string/core_xh" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_zach"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_zach.png"
                            app:ouv_describe="@string/core_describe_zach"
                            app:ouv_title="@string/core_zach" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_hy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/core/avatar_hy.jpg"
                            app:ouv_describe="@string/core_describe_hy"
                            app:ouv_title="@string/core_hy" />
                    </LinearLayout>
                </com.gustate.uotan.ui.view.smooth.SmoothCornerLayout>

                <TextView
                    android:id="@+id/tv_thanks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="28dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/special_thanks"
                    android:textColor="?attr/colorOnBackgroundTertiary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scl_core"
                    tools:ignore="TextContrastCheck" />

                <com.gustate.uotan.ui.view.smooth.SmoothCornerLayout
                    android:id="@+id/scl_thanks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/uotan_bkg_option_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_thanks"
                    app:scl_corner_radius="@dimen/option_corner_radius"
                    app:scl_smoothness_radius="@dimen/normal_smoothness">

                    <LinearLayout
                        android:id="@+id/layout_thanks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_rayzggz"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/thanks/avatar_rayzggz.png"
                            app:ouv_describe="@string/thanks_describe_rayzggz"
                            app:ouv_title="@string/thanks_rayzggz" />

                        <com.gustate.uotan.ui.view.option.OptionUserView
                            android:id="@+id/ouv_gustate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ouv_avatar_assets="file:///android_asset/thanks/avatar_gustate.jpg"
                            app:ouv_describe="@string/thanks_describe_gustate"
                            app:ouv_title="@string/thanks_gustate" />
                    </LinearLayout>
                </com.gustate.uotan.ui.view.smooth.SmoothCornerLayout>

                <TextView
                    android:id="@+id/tv_open"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="28dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/open_source_address"
                    android:textColor="?attr/colorOnBackgroundTertiary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scl_thanks"
                    tools:ignore="TextContrastCheck" />

                <com.gustate.uotan.ui.view.option.OptionTitleAndDescribeView
                    android:id="@+id/otdv_open"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_open"
                    app:optionDescribe_tiltleAndDescribe="@string/open_source_address_link"
                    app:optionTitle_tiltleAndDescribe="@string/github_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    <com.gustate.appbar.classic.ClassicHeaderBar
        android:id="@+id/layout_header_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chb_bkg_blur_enable="true"
        app:chb_bkg_blur_overlay="?attr/colorBackground"
        app:chb_bkg_blur_overlay_alpha="0.6"
        app:chb_bkg_blur_radius="25dp"
        app:chb_header_bar_height="60dp"
        app:chb_left_btn_enable="true"
        app:chb_left_btn_margin_start="28dp"
        app:chb_left_btn_src="@drawable/ic_back"
        app:chb_left_btn_tint="?attr/colorOnBackgroundPrimary"
        app:chb_system_bars_yield_enable="true"
        app:chb_title="@string/about"
        app:chb_title_color="?attr/colorOnBackgroundPrimary"
        app:chb_title_gravity="chb_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>